k8s-new/overlays/main-production/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: techhy-app-production
  labels:
    name: techhy-app-production
    environment: production
    branch: main
    domain: techhy.app
